syntax = "proto3";

package pb;


import "rpc_update_user.proto";
import "rpc_refresh_token.proto";
import "rpc_verify_token.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/noueii/gonuxt-starter/internal/pb";



service GoNuxt {
  
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){
    option (google.api.http) = {
      patch: "/v1/user"
      body: "*"
    };
  }

  rpc RefreshToken(google.protobuf.Empty) returns (RefreshTokenResponse){
    option (google.api.http) = {
      get: "/v1/token/refresh"
    };
  }

  rpc VerifyToken(google.protobuf.Empty) returns (VerifyTokenResponse){
    option (google.api.http) = {
      get: "/v1/token/verify"
    };
  }


}

